--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # General Jekyll Config
 pygments: true
-url: http://example.com
+url: http://wiki.bananafish.es
 lsi: false
 exclude: [LICENSE, CNAME, README.md, .gitignore]
 
@@ -9,26 +9,8 @@ theme:
   # Color for top bar, links, etc
   highlight_color: '#3498db'
 
-  # Profile links on the left sidebar, leave blank to ignore
-  social:
-    github: swanson
-    #bitbucket: philipj
-    hacker_news: swanson
-    #stackexchange: 348619
-    #stackoverflow: 348619
-    twitter: _swanson
-    #facebook: zuck
-    #tumblr: animalygifs
-    #linkedin: philipjagielski
-    #gplus: 110552447039675960964
-
-  # "Hi, I'm _______"
-  name: Matt Swanson
-  email: test@example.com
-  tagline: "weak opinions, strongly held"
-
   # Google Analytics key, leave blank to ignore
-  google_analytics_key: UA-xxxx-x
+  #google_analytics_key: UA-xxxx-x
 
   # Toggle "Postings are my own" disclaimer in footer
   show_disclaimer: true
